<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pocetnastranica"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-24dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/slika"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/abc" />

            <TextView
                android:id="@+id/pocetna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/holo_green_light"
                android:text="@string/tecaj"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/pocetna1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/pocetna"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/pocetna2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/pocetna2" />

            <TextView
                android:id="@+id/boldano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/boldano"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/upisitese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/upisitese"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <Button
                android:id="@+id/infoButton"
                android:layout_width="198dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:gravity="center"
                android:text="@string/info"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/mozebiti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mozebiti"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/klasicni" />

            <TextView
                android:id="@+id/klasicni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/klas" />

            <ImageButton
                android:id="@+id/intenzivni"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/intenzivni" />

            <TextView
                android:id="@+id/intensive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/inten" />

            <ImageButton
                android:id="@+id/poslovni"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/poslovni" />

            <TextView
                android:id="@+id/poso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/poslo" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/svi" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>